refactor(annotation-processor): general tidy up